log/build_2026-06-16_14-48-49/localization_system/stderr.log
CMake Deprecation Warning at /opt/ros/kilted/share/ament_cmake_target_dependencies/cmake/ament_target_dependencies.cmake:87 (message):
  ament_target_dependencies() is deprecated.  Use target_link_libraries()
  with modern CMake targets instead.  Try replacing this call with:

    target_link_libraries(imu_driver PUBLIC
      ${sensor_msgs_TARGETS}
      rclcpp::rclcpp
      sensor_msgs::sensor_msgs_library
    )

Call Stack (most recent call first):
  CMakeLists.txt:21 (ament_target_dependencies)


CMake Deprecation Warning at /opt/ros/kilted/share/ament_cmake_target_dependencies/cmake/ament_target_dependencies.cmake:87 (message):
  ament_target_dependencies() is deprecated.  Use target_link_libraries()
  with modern CMake targets instead.  Try replacing this call with:

    target_link_libraries(gps_driver PUBLIC
      ${sensor_msgs_TARGETS}
      rclcpp::rclcpp
      sensor_msgs::sensor_msgs_library
    )

Call Stack (most recent call first):
  CMakeLists.txt:25 (ament_target_dependencies)


/home/tractor/ros2_ws/src/localization_system/src/gps_driver.cpp: In member function ‘void GpsDriverNode::serial_loop()’:
/home/tractor/ros2_ws/src/localization_system/src/gps_driver.cpp:201:94: error: ‘COVARIANCE_TYPE_DIAGONAL’ is not a member of ‘sensor_msgs::msg::NavSatFix’ {aka ‘sensor_msgs::msg::NavSatFix_<std::allocator<void> >’}
  201 |                             fix_msg_.position_covariance_type = sensor_msgs::msg::NavSatFix::COVARIANCE_TYPE_DIAGONAL;
      |                                                                                              ^~~~~~~~~~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/gps_driver.dir/build.make:76: CMakeFiles/gps_driver.dir/src/gps_driver.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:165: CMakeFiles/gps_driver.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake: *** [Makefile:146: all] Error 2
